--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "relationsequelize",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "node --watch src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "mariadb": "^3.2.3",
     "sequelize": "^6.37.1"
